Fix environment properties used in a Bamboo environment

--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -88,8 +88,23 @@ void addCiMetadata() {
     }
 
     // Bamboo
-    if (System.getenv('bamboo.resultsUrl')) {
-        buildScan.link 'Bamboo build', System.getenv('bamboo.resultsUrl')
+    if (System.getenv('bamboo_resultsUrl')) {
+        buildScan.link 'Bamboo build', System.getenv('bamboo_resultsUrl')
+    }
+    if (System.getenv('bamboo_buildNumber')) {
+        buildScan.value 'CI build number', System.getenv('bamboo_buildNumber')
+    }
+    if (System.getenv('bamboo_planName')) {
+        def jobNameLabel = 'CI job'
+        def jobName = System.getenv('bamboo_planName')
+        buildScan.value jobNameLabel, jobName
+        buildScan.link 'CI job build scans', customValueSearchUrl([(jobNameLabel): jobName])
+    }
+    if (System.getenv('bamboo_buildPlanName')) {
+        def stageNameLabel = 'CI stage'
+        def stageName = System.getenv('bamboo_buildPlanName')
+        buildScan.value stageNameLabel, stageName
+        buildScan.link 'CI stage build scans', customValueSearchUrl([(stageNameLabel): stageName])
     }
 }
 
@@ -97,7 +112,7 @@ boolean isCi() {
     System.getenv('BUILD_URL') ||        // Jenkins
     System.getenv('CI_BUILD_URL') ||     // TeamCity
     System.getenv('CIRCLE_BUILD_URL') || // CircleCI
-    System.getenv('bamboo.resultsUrl')   // Bamboo
+    System.getenv('bamboo_resultsUrl')   // Bamboo
 }
 
 String execAndGetStdout(String... args) {
