Change link and value labels for Bamboo
This change better represents the terminology used in the Bamboo world

--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -95,16 +95,16 @@ void addCiMetadata() {
         buildScan.value 'CI build number', System.getenv('bamboo_buildNumber')
     }
     if (System.getenv('bamboo_planName')) {
-        def jobNameLabel = 'CI job'
-        def jobName = System.getenv('bamboo_planName')
-        buildScan.value jobNameLabel, jobName
-        buildScan.link 'CI job build scans', customValueSearchUrl([(jobNameLabel): jobName])
+        def planNameLabel = 'CI plan'
+        def planName = System.getenv('bamboo_planName')
+        buildScan.value planNameLabel, planName
+        buildScan.link 'CI plan build scans', customValueSearchUrl([(planNameLabel): planName])
     }
     if (System.getenv('bamboo_buildPlanName')) {
-        def stageNameLabel = 'CI stage'
-        def stageName = System.getenv('bamboo_buildPlanName')
-        buildScan.value stageNameLabel, stageName
-        buildScan.link 'CI stage build scans', customValueSearchUrl([(stageNameLabel): stageName])
+        def jobNameLabel = 'CI job'
+        def jobName = System.getenv('bamboo_buildPlanName')
+        buildScan.value jobNameLabel, jobName
+        buildScan.link 'CI job build scans', customValueSearchUrl([(jobNameLabel): jobName])
     }
 }
 
