--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -44,6 +44,11 @@ void addGitMetadata() {
             def commitIdLabel = 'Git commit id'
             value commitIdLabel, gitCommitId
             link 'Git commit id build scans', customValueSearchUrl([(commitIdLabel): gitCommitId])
+            def originUrl = execAndGetStdout('git', 'config', '--get', 'remote.origin.url')
+            if(originUrl.contains('github.com')) { // only for GitHub
+                def repoPath = (originUrl =~ /(.*)github\.com[\/|:](.*).git/)[0][2]
+                link 'Source', "https://github.com/$repoPath/tree/" + gitCommitId
+            }
         }
         if (gitBranchName) {
             tag gitBranchName
