--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -47,7 +47,7 @@ void addGitMetadata() {
             def originUrl = execAndGetStdout('git', 'config', '--get', 'remote.origin.url')
             if(originUrl.contains('github.com')) { // only for GitHub
                 def repoPath = (originUrl =~ /(.*)github\.com[\/|:](.*).git/)[0][2]
-                link 'Source', "https://github.com/$repoPath/tree/" + gitCommitId
+                link 'Github Source', "https://github.com/$repoPath/tree/" + gitCommitId
             }
         }
         if (gitBranchName) {
