Apply query URL fix to default gradle scan data script

--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -141,9 +141,19 @@ String customValueSearchUrl(Map<String, String> search) {
         "search.names=${encodeURL(name)}&search.values=${encodeURL(value)}"
     }.join('&')
 
-    "$buildScan.server/scans?$query"
+    def serverUrl = appendIfMissing(buildScan.server, "/")
+
+    "${serverUrl}scans?$query"
 }
 
 String encodeURL(String url){
     URLEncoder.encode(url, 'UTF-8')
+}
+
+String appendIfMissing(String str, String suffix) {
+    if (str.endsWith(suffix)) {
+        return str
+    } else {
+        return str + suffix
+    }
 }
