Fix detection of TeamCity builds, and links to the TeamCity build

--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -57,8 +57,10 @@ void addCiMetadata() {
     }
 
     // Team City
-    if (System.getenv('CI_BUILD_URL')) {
-        buildScan.link 'TeamCity build', System.getenv('CI_BUILD_URL')
+    if (System.getenv('TEAMCITY_VERSION')) {
+        def teamCityServerUrl = System.getenv('SERVER_URL')
+        def teamCityBuildNumber = System.getenv('BUILD_NUMBER')
+        buildScan.link 'TeamCity build', "${appendIfMissing(teamCityServerUrl, "/")}viewLog.html?buildId=${teamCityBuildNumber}"
     }
 
     // Circle CI
@@ -122,7 +124,7 @@ void addTestParallelization() {
 
 boolean isCi() {
     System.getenv('BUILD_URL') ||        // Jenkins
-    System.getenv('CI_BUILD_URL') ||     // TeamCity
+    System.getenv('TEAMCITY_VERSION') || // TeamCity
     System.getenv('CIRCLE_BUILD_URL') || // CircleCI
     System.getenv('bamboo_resultsUrl')   // Bamboo
 }
