Encapsulate captured CI metadata by a CI type check, and fix TC build link
Encapsulating allows to avoid clashes between env vars defined by several CI types

--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -36,56 +36,63 @@ void tagCiOrLocal() {
 }
 
 void addCiMetadata() {
-    // Jenkins
-    if (System.getenv('BUILD_URL')) {
-        buildScan.link 'Jenkins build', System.getenv('BUILD_URL')
-    }
-    if (System.getenv('BUILD_NUMBER')) {
-        buildScan.value 'CI build number', System.getenv('BUILD_NUMBER')
-    }
-    if (System.getenv('JOB_NAME')) {
-        def jobNameLabel = 'CI job'
-        def jobName = System.getenv('JOB_NAME')
-        buildScan.value jobNameLabel, jobName
-        addCustomValueSearchLink 'CI job build scans', [(jobNameLabel): jobName]
-    }
-    if (System.getenv('STAGE_NAME')) {
-        def stageNameLabel = 'CI stage'
-        def stageName = System.getenv('STAGE_NAME')
-        buildScan.value stageNameLabel, stageName
-        addCustomValueSearchLink 'CI stage build scans', [(stageNameLabel): stageName]
-    }
-
-    // Team City
-    if (System.getenv('TEAMCITY_VERSION')) {
-        def teamCityServerUrl = System.getenv('SERVER_URL')
-        def teamCityBuildNumber = System.getenv('BUILD_NUMBER')
-        buildScan.link 'TeamCity build', "${appendIfMissing(teamCityServerUrl, "/")}viewLog.html?buildId=${teamCityBuildNumber}"
+    if(isJenkins()) {
+        if (System.getenv('BUILD_URL')) {
+            buildScan.link 'Jenkins build', System.getenv('BUILD_URL')
+        }
+        if (System.getenv('BUILD_NUMBER')) {
+            buildScan.value 'CI build number', System.getenv('BUILD_NUMBER')
+        }
+        if (System.getenv('JOB_NAME')) {
+            def jobNameLabel = 'CI job'
+            def jobName = System.getenv('JOB_NAME')
+            buildScan.value jobNameLabel, jobName
+            addCustomValueSearchLink 'CI job build scans', [(jobNameLabel): jobName]
+        }
+        if (System.getenv('STAGE_NAME')) {
+            def stageNameLabel = 'CI stage'
+            def stageName = System.getenv('STAGE_NAME')
+            buildScan.value stageNameLabel, stageName
+            addCustomValueSearchLink 'CI stage build scans', [(stageNameLabel): stageName]
+        }
     }
 
-    // Circle CI
-    if (System.getenv('CIRCLE_BUILD_URL')) {
-        buildScan.link 'CircleCI build', System.getenv('CIRCLE_BUILD_URL')
+    if(isTeamCity()) {
+        if (System.getenv('SERVER_URL') && project.hasProperty('teamcity.agent.dotnet.build_id')) {
+            def teamCityServerUrl = System.getenv('SERVER_URL')
+            def teamCityBuildId = project.property('teamcity.agent.dotnet.build_id')
+            buildScan.link 'TeamCity build', "${appendIfMissing(teamCityServerUrl, "/")}viewLog.html?buildId=${teamCityBuildId}"
+        }
+        if (System.getenv('BUILD_NUMBER')) {
+            buildScan.value 'CI build number', System.getenv('BUILD_NUMBER')
+        }
     }
 
-    // Bamboo
-    if (System.getenv('bamboo_resultsUrl')) {
-        buildScan.link 'Bamboo build', System.getenv('bamboo_resultsUrl')
+    if(isCircleCI()) {
+        if(System.getenv('CIRCLE_BUILD_URL')) {
+            buildScan.link 'CircleCI build', System.getenv('CIRCLE_BUILD_URL')
+        }
     }
-    if (System.getenv('bamboo_buildNumber')) {
-        buildScan.value 'CI build number', System.getenv('bamboo_buildNumber')
-    }
-    if (System.getenv('bamboo_planName')) {
-        def planNameLabel = 'CI plan'
-        def planName = System.getenv('bamboo_planName')
-        buildScan.value planNameLabel, planName
-        addCustomValueSearchLink 'CI plan build scans', [(planNameLabel): planName]
-    }
-    if (System.getenv('bamboo_buildPlanName')) {
-        def jobNameLabel = 'CI job'
-        def jobName = System.getenv('bamboo_buildPlanName')
-        buildScan.value jobNameLabel, jobName
-        addCustomValueSearchLink 'CI job build scans', [(jobNameLabel): jobName]
+
+    if(isBamboo()) {
+        if (System.getenv('bamboo_resultsUrl')) {
+            buildScan.link 'Bamboo build', System.getenv('bamboo_resultsUrl')
+        }
+        if (System.getenv('bamboo_buildNumber')) {
+            buildScan.value 'CI build number', System.getenv('bamboo_buildNumber')
+        }
+        if (System.getenv('bamboo_planName')) {
+            def planNameLabel = 'CI plan'
+            def planName = System.getenv('bamboo_planName')
+            buildScan.value planNameLabel, planName
+            addCustomValueSearchLink 'CI plan build scans', [(planNameLabel): planName]
+        }
+        if (System.getenv('bamboo_buildPlanName')) {
+            def jobNameLabel = 'CI job'
+            def jobName = System.getenv('bamboo_buildPlanName')
+            buildScan.value jobNameLabel, jobName
+            addCustomValueSearchLink 'CI job build scans', [(jobNameLabel): jobName]
+        }
     }
 }
 
@@ -122,11 +129,24 @@ void addTestParallelization() {
     }
 }
 
-boolean isCi() {
-    System.getenv('BUILD_URL') ||        // Jenkins
-    System.getenv('TEAMCITY_VERSION') || // TeamCity
-    System.getenv('CIRCLE_BUILD_URL') || // CircleCI
-    System.getenv('bamboo_resultsUrl')   // Bamboo
+static boolean isCi() {
+    isJenkins() || isTeamCity() || isCircleCI() || isBamboo()
+}
+
+static boolean isJenkins() {
+    System.getenv('BUILD_URL')
+}
+
+static boolean isTeamCity() {
+    System.getenv('TEAMCITY_VERSION')
+}
+
+static boolean isCircleCI() {
+    System.getenv('CIRCLE_BUILD_URL')
+}
+
+static boolean isBamboo() {
+    System.getenv('bamboo_resultsUrl')
 }
 
 String execAndGetStdout(String... args) {
@@ -148,14 +168,13 @@ String customValueSearchUrl(Map<String, String> search) {
     def query = search.collect { name, value ->
         "search.names=${encodeURL(name)}&search.values=${encodeURL(value)}"
     }.join('&')
-
     "${appendIfMissing(buildScan.server, "/")}scans?$query"
 }
 
-String encodeURL(String url){
+static String encodeURL(String url){
     URLEncoder.encode(url, 'UTF-8')
 }
 
-String appendIfMissing(String str, String suffix) {
+static String appendIfMissing(String str, String suffix) {
     str.endsWith(suffix) ? str : str + suffix
 }
