Change env var used as a Jenkins detection mechanism

--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -142,7 +142,7 @@ static boolean isCi() {
 }
 
 static boolean isJenkins() {
-    System.getenv('BUILD_URL')
+    System.getenv('JENKINS_URL')
 }
 
 static boolean isTeamCity() {
