--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -16,6 +16,7 @@ tagCiOrLocal()
 addCiMetadata()
 addGitMetadata()
 addTestParallelization()
+addReportingTaskIssues()
 
 void tagOs() {
     buildScan.tag System.getProperty('os.name')
@@ -162,6 +163,67 @@ void addTestParallelization() {
     }
 }
 
+void addReportingTaskIssues() {
+    gradle.taskGraph.beforeTask { task ->
+        if (isCapturedReportingTask(task)) {
+            task.configure { t -> t.reports.xml.enabled = true }
+        }
+    }
+    gradle.taskGraph.afterTask { task, TaskState state ->
+        if (!isCapturedReportingTask(task)) {
+            return
+        }
+        def reportFile = task.reports.xml.destination as File
+        if (!reportFile.exists()) {
+            return
+        }
+        def report = new XmlSlurper().parse(reportFile)
+        def valueName = '' as String
+        def errors = [] as List<String>
+        if (ReportingTask.CHECKSTYLE.isTask(task)) {
+            valueName = 'Verification Checkstyle'
+            errors = report.file.collect {
+                String filePath = task.project.rootProject.relativePath(it.@name.text())
+                it.error.collect { "${filePath}:${it.@line}:${it.@column} \u2192 ${it.@message}" }
+            }.flatten() as List<String>
+        } else if (ReportingTask.CODENARC.isTask(task)) {
+            valueName = 'Verification CodeNarc'
+            errors = report.Package.collect {
+                def sourceDirectory = appendIfMissing(it.parent().Project.SourceDirectory.text() as String, '/')
+                it.File.collect {
+                    String filePath = task.project.rootProject.relativePath(sourceDirectory + (it.@name.text() as String))
+                    it.Violation.collect { "${filePath}:${it.@lineNumber} \u2192 ${it.Message.text()}" }
+                }.flatten()
+            }.flatten() as List<String>
+        } else if (ReportingTask.FINDBUGS.isTask(task)) {
+            valueName = 'Verification FindBugs'
+            errors = report.BugInstance.collect { bugInstance ->
+                String type = bugInstance.@type.text()
+                def error = bugInstance.breadthFirst().findAll { it.name() == 'SourceLine' }.sort(false) { it.parent().name() as SpotBugsParent }.first()
+                String startLine = error.@start.text()
+                String endLine = error.@end.text()
+                String lineNumber = endLine == startLine ? startLine : "$startLine-$endLine"
+                def absoluteFilePath = bugInstance.parent().Project.SrcDir.collect { it.text() }.find { it.endsWith(error.@sourcepath.text()) }
+                String relativePath = task.project.rootProject.relativePath(absoluteFilePath)
+                "${relativePath}:${lineNumber} \u2192 ${type}"
+            }.flatten() as List<String>
+        } else if (ReportingTask.SPOTBUGS.isTask(task)) {
+            valueName = 'Verification SpotBugs'
+            errors = report.BugInstance.collect { bugInstance ->
+                String type = bugInstance.@type.text()
+                def error = bugInstance.breadthFirst().findAll { it.name() == 'SourceLine' }.sort(false) { it.parent().name() as SpotBugsParent }.first()
+                String startLine = error.@start.text()
+                String endLine = error.@end.text()
+                String lineNumber = endLine == startLine ? startLine : "$startLine-$endLine"
+                def absoluteFilePath = bugInstance.parent().Project.SrcDir.collect { it.text() }.find { it.endsWith(error.@sourcepath.text()) }
+                String relativePath = task.project.rootProject.relativePath(absoluteFilePath)
+                "${relativePath}:${lineNumber} \u2192 ${type}"
+            }.flatten() as List<String>
+        }
+        errors.each { buildScan.value valueName, it }
+    }
+}
+
 static boolean isCi() {
     isJenkins() || isTeamCity() || isCircleCI() || isBamboo()
 }
@@ -201,7 +263,7 @@ String customValueSearchUrl(Map<String, String> search) {
     def query = search.collect { name, value ->
         "search.names=${encodeURL(name)}&search.values=${encodeURL(value)}"
     }.join('&')
-    "${appendIfMissing(buildScan.server, "/")}scans?$query"
+    "${appendIfMissing(buildScan.server as String, "/")}scans?$query"
 }
 
 static String encodeURL(String url) {
@@ -218,4 +280,30 @@ static boolean isGitInstalled() {
     } catch (IOException ignored) {
         false
     }
+}
+
+enum SpotBugsParent {
+    BugInstance, Method, Class
+}
+
+enum ReportingTask {
+
+    CHECKSTYLE('org.gradle.api.plugins.quality.Checkstyle'),
+    CODENARC('org.gradle.api.plugins.quality.CodeNarc'),
+    FINDBUGS('org.gradle.api.plugins.quality.FindBugs'),
+    SPOTBUGS('com.github.spotbugs.SpotBugsTask')
+
+    String className
+
+    private ReportingTask(String className) {
+        this.className = className
+    }
+
+    ReportingTask isTask(task) {
+        task.class.name.contains(className) ? this : null
+    }
+}
+
+static boolean isCapturedReportingTask(task) {
+    ReportingTask.values().toList().any { it.isTask(task) }
 }
