Only trim the end of exec outputs

--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -250,7 +250,7 @@ String execAndGetStdout(String... args) {
         commandLine(args)
         standardOutput = stdout
     }
-    stdout.toString().trim()
+    stdout.toString().trimAtEnd()
 }
 
 void addCustomValueSearchLink(String title, Map<String, String> search) {
@@ -306,4 +306,8 @@ enum ReportingTask {
 
 static boolean isCapturedReportingTask(task) {
     ReportingTask.values().toList().any { it.isTask(task) }
+}
+
+String.metaClass.trimAtEnd {
+    ('x' + delegate).trim().substring(1)
 }
