--- a/slow-tasks/tags-slow-tasks.gradle
+++ b/slow-tasks/tags-slow-tasks.gradle
@@ -4,9 +4,12 @@
 // take "too long" to build. Later on, as a Gradle Enterprise user, you can filter your scans
 // list to see just those builds that contained a JavaCompile task that took "too long".
 // Borrowed from: https://blog.gradle.org/build-scans-tag-root-cause
+
+def THRESHOLD_MILLIS = 15 * 60 * 1000 // 15 min
+
 allprojects {
     tasks.matching { t ->
-        t instanceof org.gradle.api.tasks.compile.JavaCompile
+        t instanceof JavaCompile
     }.configureEach {
         long start
         doFirst {
@@ -14,9 +17,9 @@ allprojects {
         }
         doLast {
             long duration = System.currentTimeMillis() - start
-            if (duration > 15 * 60 * 1000) { // 15 min
-                buildScan.tag "TooLong"
-                buildScan.value "TooLong", path
+            if (duration > THRESHOLD_MILLIS) {
+                buildScan.tag 'TooLong'
+                buildScan.value 'TooLong', path
             }
         }
     }
