--- a/os-processes/capture-os-processes.gradle
+++ b/os-processes/capture-os-processes.gradle
@@ -2,8 +2,6 @@
  * This Gradle script captures OS processes as reported by the OS 'ps' command, as custom value.
  */
 
-addStringMethods()
-
 buildScan.background {
     def psOutput = execAndGetStdout('ps', '-o pid,ppid,time,command')
     buildScan.value 'OS processes', psOutput
@@ -12,13 +10,9 @@ buildScan.background {
 static String execAndGetStdout(String... args) {
     def exec = args.toList().execute()
     exec.waitFor()
-    exec.text.trimAtEnd()
+    trimAtEnd(exec.text)
 }
 
-static void addStringMethods() {
-    if (!String.metaClass.respondsTo('', 'trimAtEnd')) {
-        String.metaClass.trimAtEnd = {
-            ('x' + delegate).trim().substring(1)
-        }
-    }
+static String trimAtEnd(String str) {
+    ('x' + str).trim().substring(1)
 }
