Fix Github source link detection from remote url
Works for
git@github.com:UserName/Example.git
https://UserName@github.com/UserName/Example.git
git://github.com/UserName/Example.git
and
git@github.com:UserName/Example
https://UserName@github.com/UserName/Example
git://github.com/UserName/Example

--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -152,7 +152,10 @@ void addGitMetadata() {
             addCustomValueSearchLink 'Git commit id build scans', [(commitIdLabel): gitCommitId]
             def originUrl = execAndGetStdout('git', 'config', '--get', 'remote.origin.url')
             if (originUrl.contains('github.com')) { // only for GitHub
-                def repoPath = (originUrl =~ /(.*)github\.com[\/|:](.*)(.git)?/)[0][2]
+                def repoPath = (originUrl =~ /(.*)github\.com[\/|:](.*)/)[0][2]
+                if (repoPath.endsWith('.git')) {
+                    repoPath = repoPath.substring(0, repoPath.length() - 4)
+                }
                 link 'Github Source', "https://github.com/$repoPath/tree/" + gitCommitId
             }
         }
