--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -135,6 +135,17 @@ void addCiMetadata() {
             buildScan.value 'CI agent ID', agentId
         }
     }
+
+    if (isGitHubActions()) {
+        def repo = System.getenv('GITHUB_REPOSITORY')
+        def runId = System.getenv('GITHUB_RUN_ID')
+        if (repo && runId) {
+            buildScan.link 'CI job', "https://github.com/$repo/actions/runs/$runId"
+        }
+        if (System.getenv('GITHUB_HEAD_REF')) {
+            buildScan.tag 'Fork'
+        }
+    }
 }
 
 void addGitMetadata() {
@@ -177,7 +188,7 @@ void addTestParallelization() {
 }
 
 static boolean isCi() {
-    isJenkins() || isTeamCity() || isCircleCI() || isBamboo()
+    isJenkins() || isTeamCity() || isCircleCI() || isBamboo() || isGitHubActions()
 }
 
 static boolean isJenkins() {
@@ -194,6 +205,10 @@ static boolean isCircleCI() {
 
 static boolean isBamboo() {
     System.getenv('bamboo_resultsUrl')
+}
+
+static boolean isGitHubActions() {
+    System.getenv('GITHUB_ACTIONS')
 }
 
 String execAndGetStdout(String... args) {
