--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -1,3 +1,6 @@
+import java.nio.charset.Charset
+import java.util.concurrent.TimeUnit
+
 /**
  * This Gradle script captures data about the OS, IDE, CI, and Git and stores it in build scans via custom tags, custom links, and custom values.
  *
@@ -18,7 +21,7 @@ addGitMetadata()
 addTestParallelization()
 
 // Add here other scripts, if needed
-//apply from:"${rootProject.projectDir}/<<other-script.gradle>>"
+// apply from:"${rootProject.projectDir}/<<other-script.gradle>>"
 
 void tagOs() {
     buildScan.tag System.getProperty('os.name')
@@ -37,7 +40,7 @@ void tagIde() {
 }
 
 void tagCiOrLocal() {
-    buildScan.tag(isCi() ? 'CI' : 'LOCAL')
+    buildScan.tag isCi() ? 'CI' : 'LOCAL'
 }
 
 void addCiMetadata() {
@@ -49,43 +52,43 @@ void addCiMetadata() {
             buildScan.value 'CI build number', System.getenv('BUILD_NUMBER')
         }
         if (System.getenv('NODE_NAME')) {
-            def agentName = System.getenv('NODE_NAME') == 'master' ? 'master-node' : System.getenv('NODE_NAME')
-            buildScan.tag agentName
-            buildScan.value 'CI node name', agentName
+            def nodeNameLabel = 'CI node'
+            def nodeName = System.getenv('JOB_NAME')
+            buildScan.value nodeNameLabel, nodeName
+            addCustomValueSearchLink buildScan, 'CI node build scans', [(nodeNameLabel): nodeName]
         }
         if (System.getenv('JOB_NAME')) {
             def jobNameLabel = 'CI job'
             def jobName = System.getenv('JOB_NAME')
             buildScan.value jobNameLabel, jobName
-            addCustomValueSearchLink 'CI job build scans', [(jobNameLabel): jobName]
+            addCustomValueSearchLink buildScan, 'CI job build scans', [(jobNameLabel): jobName]
         }
         if (System.getenv('STAGE_NAME')) {
             def stageNameLabel = 'CI stage'
             def stageName = System.getenv('STAGE_NAME')
             buildScan.value stageNameLabel, stageName
-            addCustomValueSearchLink 'CI stage build scans', [(stageNameLabel): stageName]
+            addCustomValueSearchLink buildScan, 'CI stage build scans', [(stageNameLabel): stageName]
         }
     }
 
     if (isTeamCity()) {
-        def teamCityConfigurationFileProp = 'teamcity.configuration.properties.file'
-        if (project.hasProperty(teamCityConfigurationFileProp)) {
-            def properties = new Properties()
-            properties.load(new FileInputStream("${project.property(teamCityConfigurationFileProp)}"))
-            def teamCityServerUrl = properties.getProperty("teamcity.serverUrl")
-            if (teamCityServerUrl && project.hasProperty('build.number') && project.hasProperty('teamcity.buildType.id')) {
-                def teamCityBuildNumber = project.property('build.number')
-                def teamCityBuildTypeId = project.property('teamcity.buildType.id')
-                buildScan.link 'TeamCity build', "${appendIfMissing(teamCityServerUrl, '/')}viewLog.html?buildNumber=${teamCityBuildNumber}&buildTypeId=${teamCityBuildTypeId}"
+        if (System.getProperty('teamcity.configuration.properties.file')) {
+            def properties = readPropertiesFile(System.getProperty('teamcity.configuration.properties.file'))
+            def teamCityServerUrl = properties.getProperty('teamcity.serverUrl')
+            if (teamCityServerUrl && System.getProperty('build.number') && System.getProperty('teamcity.buildType.id')) {
+                def buildNumber = System.getProperty('build.number')
+                def buildTypeId = System.getProperty('teamcity.buildType.id')
+                buildScan.link 'TeamCity build', "${appendIfMissing(teamCityServerUrl, '/')}viewLog.html?buildNumber=${buildNumber}&buildTypeId=${buildTypeId}"
             }
         }
-        if (project.hasProperty('build.number')) {
-            buildScan.value 'CI build number', project.property('build.number')
+        if (System.getProperty('build.number')) {
+            buildScan.value 'CI build number', System.getProperty('build.number')
         }
-        if (project.hasProperty('agent.name')) {
-            def agentName = project.property('agent.name')
-            buildScan.tag agentName
-            buildScan.value 'CI agent name', agentName
+        if (System.getProperty('agent.name')) {
+            def agentNameLabel = 'CI agent'
+            def agentName = System.getProperty('agent.name')
+            buildScan.value agentNameLabel, agentName
+            addCustomValueSearchLink buildScan, 'CI agent build scans', [(agentNameLabel): agentName]
         }
     }
 
@@ -97,16 +100,16 @@ void addCiMetadata() {
             buildScan.value 'CI build number', System.getenv('CIRCLE_BUILD_NUM')
         }
         if (System.getenv('CIRCLE_JOB')) {
-            def jobLabel = 'CI job'
-            def job = System.getenv('CIRCLE_JOB')
-            buildScan.value jobLabel, job
-            addCustomValueSearchLink 'CI job build scans', [(jobLabel): job]
+            def jobNameLabel = 'CI job'
+            def jobName = System.getenv('CIRCLE_JOB')
+            buildScan.value jobNameLabel, jobName
+            addCustomValueSearchLink buildScan, 'CI job build scans', [(jobNameLabel): jobName]
         }
         if (System.getenv('CIRCLE_WORKFLOW_ID')) {
             def workflowIdLabel = 'CI workflow'
             def workflowId = System.getenv('CIRCLE_WORKFLOW_ID')
             buildScan.value workflowIdLabel, workflowId
-            addCustomValueSearchLink 'CI workflow build scans', [(workflowIdLabel): workflowId]
+            addCustomValueSearchLink buildScan, 'CI workflow build scans', [(workflowIdLabel): workflowId]
         }
     }
 
@@ -121,18 +124,19 @@ void addCiMetadata() {
             def planNameLabel = 'CI plan'
             def planName = System.getenv('bamboo_planName')
             buildScan.value planNameLabel, planName
-            addCustomValueSearchLink 'CI plan build scans', [(planNameLabel): planName]
+            addCustomValueSearchLink buildScan, 'CI plan build scans', [(planNameLabel): planName]
         }
         if (System.getenv('bamboo_buildPlanName')) {
-            def jobNameLabel = 'CI job'
-            def jobName = System.getenv('bamboo_buildPlanName')
-            buildScan.value jobNameLabel, jobName
-            addCustomValueSearchLink 'CI job build scans', [(jobNameLabel): jobName]
+            def buildPlanNameLabel = 'CI build plan'
+            def buildPlanName = System.getenv('bamboo_buildPlanName')
+            buildScan.value buildPlanNameLabel, buildPlanName
+            addCustomValueSearchLink buildScan, 'CI build plan build scans', [(buildPlanNameLabel): buildPlanName]
         }
         if (System.getenv('bamboo_agentId')) {
+            def agentIdLabel = 'CI agent';
             def agentId = System.getenv('bamboo_agentId')
-            buildScan.tag agentId
-            buildScan.value 'CI agent ID', agentId
+            buildScan.value agentIdLabel, agentId
+            addCustomValueSearchLink buildScan, 'CI agent build scans', [(agentIdLabel): agentId]
         }
     }
 
@@ -146,7 +150,7 @@ void addCiMetadata() {
             def ghActionWorkflowLabel = 'GitHub workflow'
             def ghActionWorkflowName = System.getenv('GITHUB_WORKFLOW')
             buildScan.value ghActionWorkflowLabel, ghActionWorkflowName
-            addCustomValueSearchLink 'GitHub workflow build scans', [(ghActionWorkflowLabel): ghActionWorkflowName]
+            addCustomValueSearchLink buildScan, 'GitHub workflow build scans', [(ghActionWorkflowLabel): ghActionWorkflowName]
         }
     }
 
@@ -161,52 +165,52 @@ void addCiMetadata() {
             def jobLabel = 'CI job'
             def job = System.getenv('CI_JOB_NAME')
             buildScan.value jobLabel, job
-            addCustomValueSearchLink 'CI job build scans', [(jobLabel): job]
+            addCustomValueSearchLink buildScan, 'CI job build scans', [(jobLabel): job]
         }
         if (System.getenv('CI_JOB_STAGE')) {
             def stageNameLabel = 'CI stage'
             def stageName = System.getenv('CI_JOB_STAGE')
             buildScan.value stageNameLabel, stageName
-            addCustomValueSearchLink 'CI stage build scans', [(stageNameLabel): stageName]
+            addCustomValueSearchLink buildScan, 'CI stage build scans', [(stageNameLabel): stageName]
         }
     }
 }
 
 void addGitMetadata() {
-    buildScan.background {
+    buildScan.background { api ->
         if (!isGitInstalled()) {
             return
         }
+
         def gitCommitId = execAndGetStdout('git', 'rev-parse', '--short=8', '--verify', 'HEAD')
         def gitBranchName = execAndGetStdout('git', 'rev-parse', '--abbrev-ref', 'HEAD')
         def gitStatus = execAndGetStdout('git', 'status', '--porcelain')
 
         if (gitCommitId) {
-            def commitIdLabel = 'Git commit id'
-            value commitIdLabel, gitCommitId
-            addCustomValueSearchLink 'Git commit id build scans', [(commitIdLabel): gitCommitId]
+            def gitCommitIdLabel = 'Git commit id'
+            api.value gitCommitIdLabel, gitCommitId
+            addCustomValueSearchLink buildScan, 'Git commit id build scans', [(gitCommitIdLabel): gitCommitId]
+
             def originUrl = execAndGetStdout('git', 'config', '--get', 'remote.origin.url')
-            if (originUrl.contains('github.com')) { // only for GitHub
-                def repoPath = (originUrl =~ /(.*)github\.com[\/|:](.*)/)[0][2]
-                if (repoPath.endsWith('.git')) {
-                    repoPath = repoPath.substring(0, repoPath.length() - 4)
+            if (originUrl) {
+                if (originUrl.contains('github.com/') || originUrl.contains('github.com:')) {
+                    def rawRepoPath = (originUrl =~ /(.*)github\.com[\/|:](.*)/)[0][2]
+                    def repoPath = rawRepoPath.endsWith('.git') ? rawRepoPath.substring(0, rawRepoPath.length() - 4) : rawRepoPath
+                    api.link 'Github Source', "https://github.com/$repoPath/tree/$gitCommitId"
+                } else if (originUrl.contains('gitlab.com/') || originUrl.contains('gitlab.com:')) {
+                    def rawRepoPath = (originUrl =~ /(.*)gitlab\.com[\/|:](.*)/)[0][2]
+                    def repoPath = rawRepoPath.endsWith('.git') ? rawRepoPath.substring(0, rawRepoPath.length() - 4) : rawRepoPath
+                    api.link 'GitLab Source', "https://gitlab.com/$repoPath/-/commit/$gitCommitId"
                 }
-                link 'GitHub Source', "https://github.com/$repoPath/tree/$gitCommitId"
-            } else if (originUrl.contains('gitlab.com')) { // only for GitLab
-                def repoPath = (originUrl =~ /(.*)gitlab\.com[\/|:](.*)/)[0][2]
-                if (repoPath.endsWith('.git')) {
-                    repoPath = repoPath.substring(0, repoPath.length() - 4)
-                }
-                link 'GitLab Source', "https://gitlab.com/$repoPath/-/commit/$gitCommitId"
             }
         }
         if (gitBranchName) {
-            tag gitBranchName
-            value 'Git branch', gitBranchName
+            api.tag gitBranchName
+            api.value 'Git branch', gitBranchName
         }
         if (gitStatus) {
-            tag 'Dirty'
-            value 'Git status', gitStatus
+            api.tag 'Dirty'
+            api.value 'Git status', gitStatus
         }
     }
 }
@@ -230,7 +234,7 @@ static boolean isTeamCity() {
 }
 
 static boolean isCircleCI() {
-    System.getenv('CIRCLECI')
+    System.getenv('CIRCLE_BUILD_URL')
 }
 
 static boolean isBamboo() {
@@ -245,38 +249,47 @@ static boolean isGitLab() {
     System.getenv('GITLAB_CI')
 }
 
-String execAndGetStdout(String... args) {
-    def stdout = new ByteArrayOutputStream()
-    exec {
-        commandLine(args)
-        standardOutput = stdout
-    }
-    trimAtEnd(stdout.toString())
-}
-
-void addCustomValueSearchLink(String title, Map<String, String> search) {
-    if (buildScan.server) {
-        buildScan.link title, customValueSearchUrl(search)
-    }
-}
-
-String customValueSearchUrl(Map<String, String> search) {
-    def query = search.collect { name, value ->
-        "search.names=${encodeURL(name)}&search.values=${encodeURL(value)}"
-    }.join('&')
-    "${appendIfMissing(buildScan.server, '/')}scans?$query#selection.buildScanB=%7BSCAN_ID%7D"
-}
-
-static String encodeURL(String url) {
-    URLEncoder.encode(url, 'UTF-8')
-}
-
 static boolean isGitInstalled() {
+    Process process
     try {
-        "git --version".execute().waitFor() == 0
+        process = 'git --version'.execute()
+        def finished = process.waitFor(10, TimeUnit.SECONDS)
+        finished && process.exitValue() == 0;
     } catch (IOException ignored) {
         false
+    } finally {
+        if (process) {
+            process.destroyForcibly()
+        }
     }
+}
+
+static String execAndGetStdout(String... args) {
+    Process process = args.toList().execute()
+    try {
+        def standardText = process.getInputStream().getText(Charset.defaultCharset().name())
+        def ignore = process.getErrorStream().getText(Charset.defaultCharset().name())
+
+        def finished = process.waitFor(10, TimeUnit.SECONDS);
+        finished && process.exitValue() == 0 ? trimAtEnd(standardText) : null;
+    } finally {
+        process.destroyForcibly();
+    }
+}
+
+static void addCustomValueSearchLink(def buildScan, String title, Map<String, String> search) {
+    def server = buildScan.server
+    if (server) {
+        String searchParams = customValueSearchParams(search);
+        String url = "${appendIfMissing(server, '/')}scans?$searchParams#selection.buildScanB=${urlEncode('{SCAN_ID}')}"
+        buildScan.link title, url
+    }
+}
+
+static String customValueSearchParams(Map<String, String> search) {
+    search.collect { name, value ->
+        "search.names=${urlEncode(name)}&search.values=${urlEncode(value)}"
+    }.join('&')
 }
 
 static String appendIfMissing(String str, String suffix) {
@@ -285,4 +298,17 @@ static String appendIfMissing(String str, String suffix) {
 
 static String trimAtEnd(String str) {
     ('x' + str).trim().substring(1)
+}
+
+static String urlEncode(String url) {
+    URLEncoder.encode(url, 'UTF-8')
+}
+
+static Properties readPropertiesFile(String name) {
+    Properties properties = new Properties()
+    File file = new File(name)
+    file.withInputStream {
+        properties.load it
+    }
+    properties
 }
