--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -141,16 +141,14 @@ void addCiMetadata() {
     }
 
     if (isGitHubActions()) {
-        def repo = System.getenv('GITHUB_REPOSITORY')
-        def runId = System.getenv('GITHUB_RUN_ID')
-        if (repo && runId) {
-            buildScan.link 'GitHub Actions run', "https://github.com/$repo/actions/runs/$runId"
+        if (System.getenv('GITHUB_REPOSITORY') && System.getenv('GITHUB_RUN_ID')) {
+            buildScan.link 'GitHub Actions build', "https://github.com/${System.getenv('GITHUB_REPOSITORY')}/actions/runs/${System.getenv('GITHUB_RUN_ID')}"
         }
         if (System.getenv('GITHUB_WORKFLOW')) {
-            def ghActionWorkflowLabel = 'GitHub workflow'
-            def ghActionWorkflowName = System.getenv('GITHUB_WORKFLOW')
-            buildScan.value ghActionWorkflowLabel, ghActionWorkflowName
-            addCustomValueSearchLink buildScan, 'GitHub workflow build scans', [(ghActionWorkflowLabel): ghActionWorkflowName]
+            def workflowNameLabel = 'GitHub workflow'
+            def workflowName = System.getenv('GITHUB_WORKFLOW')
+            buildScan.value workflowNameLabel, workflowName
+            addCustomValueSearchLink buildScan, 'GitHub workflow build scans', [(workflowNameLabel): workflowName]
         }
     }
 
