Do not try to add custom user data when build scan extension not present

--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -13,6 +13,11 @@ import java.util.concurrent.TimeUnit
  * - Further customize this script to your needs
  */
 
+def buildScanApi = project.extensions.findByName('buildScan')
+if (!buildScanApi) {
+    return
+}
+
 tagOs()
 tagIde()
 tagCiOrLocal()
