Capture Gradle version as custom value

--- a/guided-trials-default-custom-user-data/default-custom-user-data.gradle
+++ b/guided-trials-default-custom-user-data/default-custom-user-data.gradle
@@ -1,4 +1,6 @@
 import java.nio.charset.Charset
+import java.nio.charset.StandardCharsets
+import java.security.MessageDigest
 import java.util.concurrent.TimeUnit
 
 /**
@@ -21,6 +23,7 @@ if (!buildScanApi) {
 tagOs()
 tagIde()
 tagCiOrLocal()
+addGradleVersion()
 addCiMetadata()
 addGitMetadata()
 addTestParallelization()
@@ -46,6 +49,10 @@ void tagIde() {
 
 void tagCiOrLocal() {
     buildScan.tag isCi() ? 'CI' : 'LOCAL'
+}
+
+void addGradleVersion() {
+    buildScan.value 'Gradle version', org.gradle.util.GradleVersion.current().version
 }
 
 void addCiMetadata() {
